<resources>
    <string name="app_name">Weather app</string>
    <string name="app_header">Weather</string>
    <string name="input_town">Input your town</string>
    <string name="app_header_in_town">Town is not selected</string>
    <string name="app_header_in_town_X">Weather in %s</string>
    <string name="day">Day</string>
    <string name="night">Night</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="nodata">no data</string>
    <string name="def_town">Moscow</string>
    <string name="show_def_town">No town selected. App will show you weather in Moscow</string>
    <string name="ok">OK</string>
    <string name="textviewadds">Choose adds</string>
    <string name="pressure">Pressure</string>
    <string name="wind_speed">Wind speed</string>
    <string name="humidity">Humidity</string>
    <string name="wind_direction">Wind direction</string>
    <string name="precipitation">Precipitations</string>
    <string name="overcast">Overcast</string>

    <string name="empty">Empty List</string>
    <string name="more">More...</string>
    <string name="date">Date</string>
    <string name="morning">Morning</string>
    <string name="evening">Evening</string>
    <string name="t_deg">t deg.</string>


    <string-array name="Cities">
        <item>Москва</item>
        <item>Санкт-Петербург</item>
        <item>Екатеринбург</item>
        <item>Новосибирск</item>
        <item>Самара</item>
        <item>Тула</item>
        <item>Ереван</item>
        <item>Ростов</item>
        <item>Тюмень</item>
        <item>Абакан</item>
    </string-array>


</resources>
