<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/textview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/app_header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewTownChooser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/input_town"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview1"
        app:layout_constraintVertical_bias="0.19999999" />

    <EditText
        android:id="@+id/editTextTown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:ems="8"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/def_town"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonOk"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTownChooser"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:onClick="onClickOkButton"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextTown"
        app:layout_constraintTop_toTopOf="@+id/editTextTown" />

    <TextView
        android:id="@+id/textViewAdds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/textviewadds"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTown"
        app:layout_constraintVertical_bias="0.100000024" />

    <CheckBox
        android:id="@+id/checkBoxPressure"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:checked="true"
        android:text="@string/pressure"
        app:layout_constraintEnd_toStartOf="@+id/checkBoxWindSpeed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAdds" />

    <CheckBox
        android:id="@+id/checkBoxWindSpeed"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:checked="true"
        android:text="@string/wind_speed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkBoxPressure"
        app:layout_constraintTop_toBottomOf="@+id/textViewAdds" />

    <CheckBox
        android:id="@+id/checkBoxHumidity"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        android:text="@string/humidity"
        app:layout_constraintEnd_toEndOf="@+id/checkBoxPressure"
        app:layout_constraintStart_toStartOf="@+id/checkBoxPressure"
        app:layout_constraintTop_toBottomOf="@+id/textViewAdds" />

    <CheckBox
        android:id="@+id/checkBoxWindDirection"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        android:text="@string/wind_direction"
        app:layout_constraintEnd_toEndOf="@+id/checkBoxWindSpeed"
        app:layout_constraintStart_toStartOf="@+id/checkBoxWindSpeed"
        app:layout_constraintTop_toBottomOf="@+id/textViewAdds" />

    <Switch
        android:id="@+id/switchPrecipitation"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="8dp"
        android:checked="true"
        android:text="@string/precipitation"
        app:layout_constraintEnd_toEndOf="@+id/textViewAdds"
        app:layout_constraintStart_toStartOf="@+id/textViewAdds"
        app:layout_constraintTop_toBottomOf="@+id/textViewAdds"
        tools:checked="false" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toTopOf="@+id/textViewTownChooser"
        app:layout_constraintEnd_toEndOf="@+id/textview1"
        app:layout_constraintStart_toStartOf="@+id/textview1"
        app:layout_constraintTop_toBottomOf="@+id/textview1"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/umbrella64" />


</android.support.constraint.ConstraintLayout>